[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemy.png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]

[node name="enemy" type="Area2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -3, -8, 3, -8, 6, -4, 6, 4, 3, 8, -3, 8, -5, 4, -5, -6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="." to="." method="_on_enemy_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_enemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="queue_free"]
